# mtif-parse

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
mtif_parse/: __init__.py
